--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview --port 5173",
+    "generate-snapshots": "node scripts/generate-visual-snapshots.mjs",
+    "prebuild": "npm run generate-snapshots"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.471.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +26,7 @@
     "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "puppeteer": "^24.19.0",
     "tailwindcss": "^3.4.9",
     "vite": "^5.4.0"
   }
