--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173",
-    "generate-snapshots": "node scripts/generate-visual-snapshots.mjs",
-    "prebuild": "npm run generate-snapshots"
+    "preview": "vite preview",
+    "generate-snapshots": "node scripts/generate-visual-snapshots.mjs"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
